2007-01-21  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12353
          REGRESSION: Crash on load (mutation event dispatch under the image element constructor deletes the element)

        * fast/dom/HTMLImageElement/constructor-mutation-event-dispatch-expected.txt: Added.
        * fast/dom/HTMLImageElement/constructor-mutation-event-dispatch.html: Added.

2007-01-21  Sam Weinig  <sam@webkit.org>

        Rolling out patch for http://bugs.webkit.org/show_bug.cgi?id=8360.

        * fast/layers/removed-by-scroll-handler-expected.checksum: Removed.
        * fast/layers/removed-by-scroll-handler-expected.png: Removed.
        * fast/layers/removed-by-scroll-handler-expected.txt: Removed.
        * fast/layers/removed-by-scroll-handler.html: Removed.

2007-01-21  David Kilzer  <ddkilzer@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12280
          select element not available by name through document.all
          (dropdown list not available on smarthome.com checkout)

        * fast/dom/document-all-select-expected.txt: Added.
        * fast/dom/document-all-select.html: Added.

2007-01-21  Sanjay Madhav  <sanjay12@gmail.com>

        Reviewed by Darin.

        Test for: <rdar://problem/4928583> Memory usage grows when reloading google.com/ig

        * fast/dom/gc-10-expected.txt: Added.
        * fast/dom/gc-10.html: Added.
        * fast/dom/resources/gc-10-frame.html: Added.

2007-01-21  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=10692
          REGRESSION (r14847): Unnecessary scrollbars with position:relative; and overflow:auto;

        * fast/overflow/position-relative-expected.checksum: Added.
        * fast/overflow/position-relative-expected.png: Added.
        * fast/overflow/position-relative-expected.txt: Added.