@@ -1,0 +1,29 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x576
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {#text} at (0,0) size 53x18
+          text run at (0,0) width 53: "Test for "
+        RenderInline {I} at (0,0) size 652x18
+          RenderInline {A} at (0,0) size 301x18 [color=#0000EE]
+            RenderText {#text} at (53,0) size 301x18
+              text run at (53,0) width 301: "http://bugs.webkit.org/show_bug.cgi?id=12345"
+          RenderText {#text} at (354,0) size 351x18
+            text run at (354,0) width 4: " "
+            text run at (358,0) width 347: "REGRESSION: Disabled pop-up text is not grayed out"
+        RenderText {#text} at (705,0) size 4x18
+          text run at (705,0) width 4: "."
+      RenderBlock {P} at (0,34) size 784x22
+        RenderMenuList {SELECT} at (2,2) size 161x18 [color=#808080] [bgcolor=#FFFFFF]
+          RenderBlock (anonymous) at (8,2) size 130x13
+            RenderText at (0,0) size 132x13
+              text run at (0,0) width 132: "This text should be gray"
+        RenderText {#text} at (0,0) size 0x0
+      RenderBlock {P} at (0,72) size 784x22
+        RenderMenuList {SELECT} at (2,2) size 167x18 [bgcolor=#FFFFFF]
+          RenderBlock (anonymous) at (8,2) size 136x13
+            RenderText at (0,0) size 137x13
+              text run at (0,0) width 137: "This text should be black"
+        RenderText {#text} at (0,0) size 0x0
