@@ -1,0 +1,17 @@
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+    <p>
+        Test for <i><a href="http://bugs.webkit.org/show_bug.cgi?id=12345">http://bugs.webkit.org/show_bug.cgi?id=12345</a>
+        REGRESSION: Disabled pop-up text is not grayed out</i>.
+    </p>
+    <p>
+        <select disabled><option>This text should be gray</option></select>
+    </p>
+    <p>
+        <select><option>This text should be black</option></select>
+    </p>
+</body>
+</html>
