@@ -890,8 +890,9 @@ void RenderThemeMac::adjustMenuListStyle(CSSStyleSelector* selector, RenderStyle
     // White-space is locked to pre
     style->setWhiteSpace(PRE);
 
-    // Set the foreground color to black when we have the aqua look
-    style->setColor(Color::black);
+    // Set the foreground color to black or gray when we have the aqua look.
+    // Cast to RGB32 is to work around a compiler bug.
+    style->setColor(e->isEnabled() ? static_cast<RGBA32>(Color::black) : Color::darkGray);
 
     // Set the button's vertical size.
     setButtonSize(style);
